kube/deploy/apps/kah/inspircd/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kah-irc
  namespace: &app kah
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: inspircd
      io.kubernetes.pod.namespace: *app
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # connect to server
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "7001"
            - port: "6697"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toEntities:
        - world
